# NativeEngineBenchmark

./: .gitmodules  README.md
BenchmarkPaperCode/: ck.txt  ckAll.txt  comet.txt  comet2.txt  hashTable.txt  vanilla.txt  vanilla2.txt  velox.txt  veloxAll.txt  veloxAll2.txt
BenchmarkPaperCode/FORCReaderIterator/: FPGABatchIterator.h  OrcReaderIterator.h
BenchmarkPaperCode/agg/: 3_agg_compare.py  agg.scala  aggCompare.py  aggregation.txt  blaze.txt  clickhouse.txt  comet.txt  meanAuron.txt  meanVanilla.txt  minMaxVanilla.txt  plot.py  vanilla.txt  velox.txt
BenchmarkPaperCode/config/: blaze.sh  ck.sh  comet.sh  vanilla.sh  velox.sh
BenchmarkPaperCode/costModel/: config  costModel.py  costModel3Columns.py  costModelGrouped.py  costModelWithGluten.py  costModelfinal.py
BenchmarkPaperCode/cpuutil/: plot.py
BenchmarkPaperCode/fileScan/: draw.py  drawOrcScanCompress.py  runGPU.sh  runORC.scala  tpcdsCaseStudy.py
BenchmarkPaperCode/join/: breakdown.py  join.scala  joinWithDiffHashTable.scala  plot.py  plotDiffHashTable.py  plotWithModel.py  stream
BenchmarkPaperCode/memory/: memory.py
BenchmarkPaperCode/metastore_db/: db.lck  (+1 more)
CostModelBenchmark/: README.md
ORCScanCaseStudy/: CMakeLists.txt  README.md  generateOrc.py  orc_benchmark.cpp  runGPU.sh  runORC.scala
TPCDSBenchmark/: README.md  run_tpcds_orc.scala  run_tpcds_parquet.scala
aggregationMicrobenchmark/: README.md  agg.scala  convertCsvToParquet.py
hashJoinMicrobenchmark/: README.md  VeloxHJBench.cpp  join.scala
selectiveScanMicrobenchmark/: README.md
sortBenchmark/: sort.scala
(+1578 files in other folders)
